# plok-photomanager

./: .gitmodules  CMakeLists.txt  Cargo.toml  ThumbnailDelegate.qml  capture.cpp  capture.h  database.cpp  database.h  gui.qrc  icons.qrc  imageloader.cpp  imageloader.h  imageloader_generic.cpp  imageloader_generic.h  imageloader_raw.cpp  imageloader_raw.h  imageprovider.cpp  imageprovider.h  imageprovider_qml.cpp  imageprovider_qml.h  imageprovider_qmlwrapper.cpp  imageprovider_qmlwrapper.h  imageuploader.cpp  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  miscutils.h  photo.cpp  photo.h  plok-photomanager.pro  set.cpp  set.h  thumbnailNavigator.qml  thumbnailView.qml  thumbnailcache.cpp  thumbnailer.cpp  thumbnailer.h  (+7 more)
archive/: import procedure.txt  main.cpp  plok-photomanager.pro
archive/common/: miscutils.cpp
archive/database/: database.cpp  database.h  picturedao.cpp  picturedao.h  setdao.cpp
cmake/: cmake-common.txt
database/: database.cpp  database.h  database.pri  setdao.h
gui/: ThumbnailDelegate.qml  ThumbnailDelegate_navigator.qml  createsetdialog.cpp  createsetdialog.h  createsetdialog.ui  gui.pri  gui.qrc  histogramview.cpp  histogramview.h  imageeditor.cpp  imageeditor.h  imageeditor.ui  imageprovider_qmlwrapper.cpp  imageprovider_qmlwrapper.h  imageview.cpp  imageview.h  lutview.cpp  lutview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  setview.qml  setviewmodelitem.cpp  setviewmodelitem.h  sourcemenu.cpp  sourcemenu.h  thumbnailNavigator.qml  thumbnailView.qml  thumbnailmodelitem.cpp  thumbnailmodelitem.h
image/: image.cpp  image.h  image.pri  imageloader.cpp  imageloader.h  imageloader_generic.cpp  imageloader_generic.h  imageloader_raw.cpp  imageloader_raw.h  imageprocessing.cpp  imageprocessing.h  imageprovider.cpp  imageprovider.h  lut.h  thumbnailcache.cpp  thumbnailcache.h  thumbnailer.cpp  thumbnailer.h
import/: directoryimporter.h
metadata/: metadata.pri
model/: capture.cpp  capture.h  filelibrary.cpp  filelibrary.h  library.cpp  library.h  model.pri  picture.cpp  picture.h  picturedao.h  set.cpp  set.h  setdao.cpp  setdao.h
server/: imageuploader.cpp  imageuploader.h  setcreator.cpp  setcreator.h
src/: main.rs
src/gui/: CMakeLists.txt  main.cpp
worker/: workthread.cpp  workthread.h
(+32 files in other folders)
